<resources>
    <string name="app_name">Mooncell</string>
    <string name="action_favorite">收藏</string>
    <string name="action_float">悬浮窗切换</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_example">exampleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">未登录</string>
    <string name="nav_header_subtitle">Ciao~</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_share">分享</string>
    <string name="action_notice">通知</string>
    <string name="action_login">登录</string>
    <string name="action_about">关于Mooncell</string>
    <string name="action_about_client">关于客户端</string>
    <string name="sidebar_group2_title">常用</string>
    <string name="svt_overview">英灵图鉴</string>
    <string name="ce_overview">概念礼装图鉴</string>
    <string name="cc_overview">指令纹章图鉴</string>
    <string name="weekly_mission">周常任务</string>
    <string name="new_cards">新增卡牌</string>
    <string name="simulate_gacha">模拟抽卡</string>
    <string name="quest">关卡配置</string>
    <string name="enemy_overview">敌人一览</string>
    <string name="items_overview">道具一览</string>
    <string name="skill_overview">技能一览</string>
    <string name="mst_equip">御主装备</string>
    <string name="clothes_overview">灵衣一览</string>
    <string name="music_overview">音乐鉴赏</string>
    <string name="cv_overview">声优一览</string>
    <string name="illust_overview">画师一览</string>
    <string name="jp_client_dl">日服客户端下载</string>
    <string name="sponsor">支持我们</string>
    <string name="faq">求助与建议</string>
    <string name="comment">评论须知</string>
    <string name="preference_file_key">wiki.fgo.app.PREFERENCE_FILE_KEY</string>
    <string name="local_log_userId" />
    <string name="local_log_userId_default" />
    <string name="action_exit">退出</string>
    <string name="main_page">首页</string>
    <string name="float_checkbox_state">是否可拖拽</string>
    <string name="action_settings">设置</string>
    <string name="tab">tab1</string>
    <string name="license_info">开源项目鸣谢</string>
    <string name="about_developer">关于开发者</string>
    <string name="developer_info">开发者信息</string>
    <string name="float_back_desc">Back</string>
    <string name="float_ball_desc">floatball mode</string>
    <string name="sidebar_group3_title">关于</string>
</resources>