<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notice"
        android:icon="@drawable/ic_action_notice"
        android:title="@string/action_notice"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_action_favorite_empty"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>